--- a/CTF/1.CTF.md
+++ b/CTF/1.CTF.md
@@ -1,77 +1,40 @@
-1.CTF一般译作夺旗赛,在网络安全领域中指的是网络安全技术人员之间进行技术竞技
-的一种比赛形式。
-  参赛团队通过进行攻防对抗、程序分析等形式,率先从主办方给出的比赛环境中得到
-一串具有一定格式的字符串或其他内容,并将其提交给主办方,从而夺得分数。(我们把
-这样的内容称为"Flag")
-  flag所表示的为目标服务器上存储的一些敏感机密的信息,一般固定格式为flagP{xx
-xxx}
+ 1. CTF一般译作夺旗赛，在网络安全领域中指的是网络安全技术人员之间进行技术竞技的一种比赛形式。
+   参赛团队通过进行攻防对抗、程序分析等形式，率先从主办方给出的比赛环境中得到一串具有一定格式的字符串或其他内容，并将其提交给主办方，从而夺得分数。（我们把这样的内容称为"Flag"）
+   flag所表示的为目标服务器上存储的一些敏感机密的信息，一般固定格式为`flagP{xxxxxx}`
 
-2.CTF竞赛模式具体分为以下几类:
-  (1)理论知识:多见于国内比赛,通常为选择题,包含单选及多选。
-  (2)Jeopardy-解题:参赛队伍通过在线环境交互或文件离线分析,解决网络安全技术
-  挑战获取相应分值,最先完成的前三支队伍会获得额外分值。还有一种规则是设置每
-  道题目的初始分数,根据该题的成功解答队伍数,来逐渐降低该题的分值。
-    题目类型主要包含Web网络攻防、RE逆向工程、Pwn二进制漏洞利用、Crypto密码攻
-  击以及Misc安全杂项五类。
-  (3)AwD攻防模式,参赛队伍连接到同一个网络空间。主办方会预先为每个参赛队分配
-  要防守的主机,每个队伍之间的主机配置及漏洞是完全一致的,选手需要防护自己的
-  主机不被攻击的同时挖掘漏洞并攻击对手服务来得分。
-     AwD通常仅包含Web及Pwn两种类型题目。
-  (4)ADP-攻防增强,在该模式下中,参赛队伍连接到同一个网络空间。主办方会在平台
-  上放置题目,选手需要登录到平台获得题目信息。
-     攻击模式下,平台会给出题目的访问链接,选手按照解题模式做题提交flag即可完
-  成攻击。
-     防御模式下,选手需要自行挖掘题目漏洞,并制作漏洞补丁上传至平台,之后点击验
-  证。
-	 ADP通常仅包含Web及Pwn两种类型的题目,相较于AwD来说无需编写批量攻击脚本,也
-  无需关注题目的环境是否被攻击,是否服务异常等等,要做的只是攻击一次,防御一次。
-  (5)RHG-自动化利用人工智能或是AI或是自动化攻击程序来全自动得挖掘并利用漏洞,
-  比赛开始前会给出测试环境以及相关接口文档,选手需要编写自动化程序(bot)来请求
-  接口获取题目相关信息,在程序中全自动访问并挖掘目标漏洞,完成利用漏洞攻击并获
-  取flag的过程。
-  (6)RW-真实世界,通常会围绕能够应用于真实渗透攻击当中的漏洞,一般题型为VM/
-  Docker逃逸、针对浏览器的攻击、针对loT/Car等设备的攻击,Web类攻击等。此模式
-  不存在Flag。
-  (7)KoH-抢占山头,选手面对一个黑盒目标,需要先挖掘漏洞并利用漏洞控制目标。将
-  自己的队伍标识写入到指定文件。随后在该主机上进行加固等操作防止其他队伍攻击。
-  (8)Mix[混合],结合了以上多种模式。
+2. CTF竞赛模式具体分为以下几类:
+   - 理论知识: 多见于国内比赛，通常为选择题，包含单选及多选。
+   - Jeopardy-解题: 参赛队伍通过在线环境交互或文件离线分析，解决网络安全技术挑战获取相应分值，最先完成的前三支队伍会获得额外分值。题目类型主要包含Web网络攻防、RE逆向工程、Pwn二进制漏洞利用、Crypto密码攻击以及Misc安全杂项五类。
+   - AwD攻防模式: 参赛队伍连接到同一个网络空间，主办方会预先为每个参赛队分配要防守的主机，每个队伍之间的主机配置及漏洞是完全一致的，选手需要防护自己的主机不被攻击的同时挖掘漏洞并攻击对手服务来得分。通常仅包含Web及Pwn两种类型题目。
+   - ADP-攻防增强: 在该模式下中，参赛队伍连接到同一个网络空间。攻击模式下，平台会给出题目的访问链接，选手按照解题模式做题提交flag即可完成攻击。防御模式下，选手需要自行挖掘题目漏洞，并制作漏洞补丁上传至平台，之后点击验证。通常仅包含Web及Pwn两种类型的题目。
+   - RHG-自动化利用: 使用人工智能或自动化攻击程序来全自动挖掘并利用漏洞，比赛开始前会给出测试环境以及相关接口文档，选手需要编写自动化程序(bot)来请求接口获取题目相关信息，在程序中全自动访问并挖掘目标漏洞，完成利用漏洞攻击并获取flag的过程。
+   - RW-真实世界: 通常围绕能够应用于真实渗透攻击中的漏洞，题目类型为VM/Docker逃逸、针对浏览器的攻击、针对loT/Car等设备的攻击、Web类攻击等。此模式不存在Flag。
+   - KoH-抢占山头: 选手面对一个黑盒目标，需要先挖掘漏洞并利用漏洞控制目标，将自己的队伍标识写入到指定文件。随后在该主机上进行加固等操作防止其他队伍攻击。
+   - Mix[混合]: 结合了以上多种模式。
 
-3.CTF比赛一般分为线上赛和线下赛。一般线上多为初赛,线下多为决赛。线上选手通过
-主办方搭建的比赛平台在线注册,在线做题并提交flag,线上多为解题模式,攻防模式较少。
-线下选手会前往比赛所在地,现场接入比赛网络进行比赛,线下多为AWD模式,近年来也会
-出现多种模式混合。
+3. CTF比赛一般分为线上赛和线下赛。一般线上多为初赛，线下多为决赛。线上选手通过主办方搭建的比赛平台在线注册，在线做题并提交flag，线上多为解题模式，攻防模式较少。
+   线下选手会前往比赛所在地，现场接入比赛网络进行比赛，线下多为AWD模式，近年来也会出现多种模式混合。
 
-4.网络安全最重要的就是漏洞挖掘能力,SRC是漏洞提交平台的总称,渗透人员在对目标
-渗透发现目标漏洞之后,需要把发现的漏洞提交到官方认可的漏洞提交平台。
+4. 网络安全最重要的就是漏洞挖掘能力，SRC是漏洞提交平台的总称，渗透人员在对目标渗透发现目标漏洞之后，需要把发现的漏洞提交到官方认可的漏洞提交平台。
 
-5.强网杯、网鼎杯。
+5. 强网杯、网鼎杯。
 
-6.CTF竞赛模式:a.解题模式,以解决网络安全技术挑战题目的分值和时间来排名。
- (1)PWN类题目:通常会直接给定一个二进制文件,我们要找出可执行文件的漏洞。
- (2)web渗透类题目:利用web安全漏洞获取flag。
- (3)Reverse类题目:逆向工程,通过逆向windows或Linux等可执行程序,从源代码发现
- 漏洞,利用漏洞获取flag。
- (4)CRYPTO类题目:密码学题目,通过发现加密算法的弱点,解密被加密的内容。
- (5)MISC类题目:安全杂项
- b.攻防模式,在网络空间中互相进行攻击和防守,挖掘网络服务漏洞并攻击对手服务来得分,
- 修补自身服务漏洞进行防御来避免丢分。
- c.混合模式,结合了解题模式与攻防模式的CTF赛制。
+6. CTF竞赛模式：
+   a. 解题模式，以解决网络安全技术挑战题目的分值和时间来排名。
+      - PWN类题目：通常会直接给定一个二进制文件，我们要找出可执行文件的漏洞。
+      - Web渗透类题目：利用Web安全漏洞获取flag。
+      - Reverse类题目：逆向工程，通过逆向Windows或Linux等可执行程序，从源代码发现漏洞，利用漏洞获取flag。
+      - CRYPTO类题目：密码学题目，通过发现加密算法的弱点，解密被加密的内容。
+      - MISC类题目：安全杂项
+   b. 攻防模式，在网络空间中互相进行攻击和防守，挖掘网络服务漏洞并攻击对手服务来得分，修补自身服务漏洞进行防御来避免丢分。
+   c. 混合模式，结合了解题模式与攻防模式的CTF赛制。
 
-7.CTFHub专注信息安全竞赛,拥有完善的题目环境及配套Writeup。
+7. CTFHub专注信息安全竞赛，拥有完善的题目环境及配套Writeup。
 
-8.CTF主要包含以下五个大类的题目,有些比赛会根据自己的侧重点单独添加某个分类,近
-年来也会出来混合类型的题目。
- (1)Web类大部分和网、Web、HTTP等相关技能有关,主要考察选手对于Web攻防的一些知识,
-    诸如SQL注入、XSS、代码执行、代码审计等。一般Web题目只会给一个能够访问的URL。
- (2)Pwn重点考察对于二进制漏洞的挖掘和利用,考点通常在于堆栈溢出、格式化漏洞、UAF
- 、Double Free等。选手需要根据题目中给出的二进制可执行文件进行逆向分析,找出其中
- 的漏洞并进行利用,编写对应的漏洞攻击脚本,对主办方给出的远程服务器进行攻击并获取
- flag。
- (3)Reverse考察逆向工程,题目给出一个可执行二进制文件,有时也可能安卓的APK包。选手
- 需要逆向给出的程序,分析其程序工作原理。最终根据程序行为等获得flag。
- (4)Crypto考察对密码学相关知识的了解,诸如RSA、AES、DES等,有时也会给出一个加密脚本
- 和密文,根据加密流程逆推出明文。
- (5)MIsc意为杂项,不包含上面分类的题目都在这个分类。题目给出附件,选手下载附件进行
- 分析,最终得出flag。常见的有图片隐写、视频隐写、文档隐写、流量分析、协议分析、
- 游戏、loT相关等。
- 
+8. CTF主要包含以下五个大类的题目，有些比赛会根据自己的侧重点单独添加某个分类，近年来也会出现混合类型的题目。
+   - Web类：大部分和网、Web、HTTP等相关技能有关，主要考察选手对于Web攻防的一些知识，诸如SQL注入、XSS、代码执行、代码审计等。一般Web题目只会给一个能够访问的URL。
+   - Pwn：重点考察对于二进制漏洞的挖掘和利用，考点通常在于堆栈溢出、格式化漏洞、UAF、Double Free等。选手需要根据题目中给出的二进制可执行文件进行逆向分析，找出其中的漏洞并进行利用，编写对应的漏洞攻击脚本，对主办方给出的远程服务器进行攻击并获取flag。
+   - Reverse：考察逆向工程，题目给出一个可执行二进制文件，有时也可能安卓的APK包。选手需要逆向给出的程序，分析其程序工作原理。最终根据程序行为等获得flag。
+   - Crypto：考察对密码学相关知识的了解，诸如RSA、AES、DES等，有时也会给出一个加密脚本和密文，根据加密流程逆推出明文。
+   - Misc：意为杂项，不包含上面分类的题目都在这个分类。题目给出附件，选手下载附件进行分析，最终得出flag。常见的有图片隐写、视频隐写、文档隐写、流量分析、协议分析、游戏、loT相关等。
+
