--- a/CTF/1.CTF.md
+++ b/CTF/1.CTF.md
@@ -1,9 +1,9 @@
- 1.  CTF一般译作夺旗赛，在网络安全领域中指的是网络安全技术人员之间进行技术竞技的一种比赛形式。
+ 1.  (1) CTF一般译作夺旗赛，在网络安全领域中指的是网络安全技术人员之间进行技术竞技的一种比赛形式。
    
-     参赛团队通过进行攻防对抗、程序分析等形式，率先从主办方给出的比赛环境中得到一串具有一定格式的字符串或其他内容，并将其提   
+     (2) 参赛团队通过进行攻防对抗、程序分析等形式，率先从主办方给出的比赛环境中得到一串具有一定格式的字符串或其他内容，并将其提   
  交给主办方，从而夺得分数。（我们把这样的内容称为"Flag"）。   
 
-     flag所表示的为目标服务器上存储的一些敏感机密的信息，一般固定格式为`flagP{xxxxxx}`
+     (3) flag所表示的为目标服务器上存储的一些敏感机密的信息，一般固定格式为`flagP{xxxxxx}`
 
 2. CTF竞赛模式具体分为以下几类:
    - 理论知识: 多见于国内比赛，通常为选择题，包含单选及多选。
